<resources>
    <string name="app_name">My Diary</string>
    <string name="date_picker">Pick a date</string>
    <string name="entry_editor">Write your entry</string>
    <string name="save_diary_entry">Save diary entry</string>
    <string name="date">%1$d/%2$s/%3$d</string>
    <string name="save_note">Save note</string>
    <string name="entry_title">Entry title</string>
    <string name="your_diary_entry">Your diary entry</string>
    <string name="entry_saved">Entry saved</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="date_ascending">Date ascending</string>
    <string name="date_descending">Date descending</string>
    <string name="title_ascending">Title ascending</string>
    <string name="title_descending">Title descending</string>
</resources>