<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:icon="@android:drawable/ic_menu_sort_by_size"
            app:showAsAction="always"
            android:title="@string/sort"
            android:id="@+id/sort">
        <menu>
            <item
                    android:title="@string/date_ascending"
                    android:id="@+id/dateAsc"
                    />
            <item
                    android:title="@string/date_descending"
                    android:id="@+id/dateDesc"/>
            <item
                    android:title="@string/title_ascending"
                    android:id="@+id/titleAsc"/>
            <item
                    android:title="@string/title_descending"
                    android:id="@+id/titleDesc"/>
        </menu>
    </item>

</menu>