<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateReminder"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/noteTitle"
            android:hint="@string/entry_title"
            app:layout_constraintTop_toBottomOf="@+id/dateReminder"
            android:layout_marginTop="8dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/noteContent"
            android:hint="@string/your_diary_entry"
            app:layout_constraintTop_toBottomOf="@+id/noteTitle"
            android:layout_marginTop="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/save_diary_entry"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:id="@+id/floatingSaveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="@color/colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>